Fix username wrap on profiles

--- a/public/themes/default.css
+++ b/public/themes/default.css
@@ -92,6 +92,8 @@
   flex: 1 1 auto;
   font-size: 48px;
   line-height: 1;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .badge {
